# 2023-practice

./: .dev.env  .env  .gitignore  ApolloClient.md  App.js  Dockerfile  README.MD  README.md  SUMMARY.md  book.json  build.gradle  constants.js  main.py  package-lock.json  package.json  plan.dio  pyproject.toml  readme.md  requirements.txt  schema.js  server.js  test.js  tsconfig.json
Apollo/: Client.md  Server.md
React/: StyledComponents.md
ReactNative/: Expo.md
boards/: board_controller.py  board_service.py
common/: config.py
decorator-typescript/: package-lock.json
fast_api/: main.py
functional-tools/: README.md  SUMMARY.md  package-lock.json  package.json
instaclone-native/: App.js
manager/: manager.typeDefs.js
modules/: styled-components.md
navigators/: LoggedOutNav.js
nest-be/: README.md
nest-template/: package.json  readme.md
nuber/: .dev.env  package-lock.json  package.json
photo/: photo.resolvers.js
prisma/: schema.prisma
rainbow/: .gitignore  README.md  build.gradle
rb_worker/: .gitignore  README.MD  main.py
react-tools/: tsconfig.json
reddit_/: reddit_controller.py
scheduler/: .gitignore  README.MD  fast_config.py  schedule_service.py  test_main.http
schedules/: schedule_controller.py
scraps/: scraps_service.py
screens/: CreateAccount.js
shared/: shared.utils.js
src/: App.tsx  app.controller.ts  app.module.ts  index.js  index.ts  main.ts  styles.js
standby-be/: package.json  (+1 more)
worker/: pyproject.toml
worker/common/crawler/: crawler.py
worker/common/dtos/: delete_scrap.py
worker/common/entities/: core.py
(+306 files in other folders)
