[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["jinwanseo <jinwanseo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pika = "^1.3.2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
selenium = "^4.15.2"
pandas = "^2.1.3"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
